# fastapi-apcore

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  pyrightconfig.json
planning/fastapi-apcore/: plan.md  state.json
src/fastapi_apcore/: __init__.py  cli.py  client.py
src/fastapi_apcore/engine/: __init__.py  config.py  context.py  extensions.py  observability.py  registry.py  serializers.py  shortcuts.py  tasks.py
src/fastapi_apcore/output/: __init__.py  registry_writer.py  yaml_writer.py
src/fastapi_apcore/scanners/: __init__.py  base.py  native.py  openapi.py
tests/: test_client.py  test_config.py  test_context.py  test_extensions.py  test_integration.py  test_observability.py  test_public_api.py  test_registry.py  test_scanner.py  test_serializers.py  test_shortcuts.py  test_tasks.py  test_writers.py
